<resources>
    <string name="app_name">GeekMessenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Аккаунт</string>
    <string name="number">+996708445976</string>
    <string name="chance_number">Нажмите чтобы изменить номер телефона</string>
    <string name="which_user">Duulatbekova Zaku</string>
    <string name="online">В сети</string>
    <string name="settings">Настройки</string>
    <string name="tv_notifications">Уведомление и звуки</string>
    <string name="tv_crossed">Скрыть номер телефона</string>
    <string name="tv_language">Язык</string>

</resources>